--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,6 +49,12 @@
             <article class="catalog__item">
               <a href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
@@ -76,13 +82,19 @@
                   </tr>
                 </table>
               </div>
-              <a class="catalog__order" href="#">Заказать</a>
+              <a class="catalog__order" href="order.html">Заказать</a>
             </article>
           </li>
           <li>
             <article class="catalog__item">
               <a href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
@@ -110,13 +122,18 @@
                   </tr>
                 </table>
               </div>
-              <a class="catalog__order" href="#">Заказать</a>
+              <a class="catalog__order" href="order.html">Заказать</a>
             </article>
           </li>
           <li>
             <article class="catalog__item">
               <a href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
@@ -144,13 +161,18 @@
                   </tr>
                 </table>
               </div>
-              <a class="catalog__order" href="#">Заказать</a>
+              <a class="catalog__order" href="order.html">Заказать</a>
             </article>
           </li>
           <li>
             <article class="catalog__item">
               <a href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
@@ -177,13 +199,19 @@
                   </tr>
                 </table>
               </div>
-              <a class="catalog__order" href="#">Заказать</a>
+              <a class="catalog__order" href="order.html">Заказать</a>
             </article>
           </li>
           <li>
             <article class="catalog__item">
               <a href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
@@ -211,13 +239,19 @@
                   </tr>
                 </table>
               </div>
-              <a class="catalog__order" href="#">Заказать</a>
+              <a class="catalog__order" href="order.html">Заказать</a>
             </article>
           </li>
           <li>
             <article class="catalog__item">
               <a href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
@@ -245,13 +279,18 @@
                   </tr>
                 </table>
               </div>
-              <a class="catalog__order" href="#">Заказать</a>
+              <a class="catalog__order" href="order.html">Заказать</a>
             </article>
           </li>
           <li>
             <article class="catalog__item">
               <a href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
@@ -279,7 +318,7 @@
                   </tr>
                 </table>
               </div>
-              <a class="catalog__order" href="#">Заказать</a>
+              <a class="catalog__order" href="order.html">Заказать</a>
             </article>
           </li>
           <li>
@@ -316,7 +355,7 @@
                 <td>200 Р.</td>
               </tr>
             </table>
-            <a class="other-goods__order button" href="#">Заказать</a>
+            <a class="other-goods__order button" href="order.html">Заказать</a>
           </li>
           <li class="other-goods__item">
             <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Питьевая вода</a></h3>
@@ -326,7 +365,7 @@
                 <td>50 Р.</td>
               </tr>
             </table>
-            <a class="other-goods__order button" href="#">Заказать</a>
+            <a class="other-goods__order button" href="order.html">Заказать</a>
           </li>
           <li class="other-goods__item">
             <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Молоко</a></h3>
@@ -336,7 +375,7 @@
                 <td>100 Р.</td>
               </tr>
             </table>
-            <a class="other-goods__order button" href="#">Заказать</a>
+            <a class="other-goods__order button" href="order.html">Заказать</a>
           </li>
           <li class="other-goods__item">
             <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Витамины</a></h3>
@@ -346,7 +385,7 @@
                 <td>300 Р.</td>
               </tr>
             </table>
-            <a class="other-goods__order button" href="#">Заказать</a>
+            <a class="other-goods__order button" href="order.html">Заказать</a>
           </li>
         </ul>
 
@@ -374,9 +413,10 @@
         <p class="contacts__text">ул.Большая Конюшенская , д.19/8<br><br> Санкт-Петербург</p>
       </div>
     </div>
-    <iframe class="contacts__image"
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru"
-      width="320" height="360" style="border:0" allowfullscreen></iframe>
+    <div class="contacts__image">
+      <iframe class="contacts__map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru"
+        width="320" height="360" style="border:0" allowfullscreen></iframe></div>
   </section>
   <footer class="footer">
     <div class="footer__wrapper">
